[build-system]
requires = ["setuptools>=80.0.0", "wheel", "tomli; python_version < '3.11'"]
build-backend = "build_meta"
backend-path = ["build_backend"]

[project]
name = "radkummerkasten"
description = "A suggestion/complaints box for the Austrian Cycling Federation"
readme = "README.md"

authors = [
    { name = "Christoph Fink" },
]

dependencies = [
    "flask",
    "geoalchemy2",
    "flask-cors",
    "geopandas",
    "mercantile",
    "requests",
    "shapely",
    "sqlalchemy",
    "vt2pbf",
    "xdg-base-dirs; python_version > '3.9'",
    "xdg; python_version < '3.10'",
]
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Flask",
]
keywords = ["survey", "cycling", "map", "cartography"]
license = "GPL-3.0-or-later"

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject",
    "isort",
    "Pillow",
    "pydocstyle",
    "pylint",
    "werkzeug"
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-images"
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixtures",
    "requests",
    "selenium",
    "werkzeug"
]


[project.urls]
# Documentation = "https://radkummerkasten.readthedocs.org/"
Repository = "https://github.com/radlobby/radkummerkasten.git"
"Change log" = "https://github.com/radlobby/radkummerkasten/blob/main/CHANGELOG.md"
"Bug tracker" = "https://github.com/radlobby/radkummerkasten/issues"

[tool.coverage.paths]
equivalent_sources = [
    "src/radkummerkasten/",
    ".virtualenv/lib/python*/site-packages/radkummerkasten/",
    "/opt/hostedtoolcache/Python/*/x64/lib/python*/site-packages/radkummerkasten/",
    "/Library/Frameworks/Python.framework/Versions/*/lib/python*/site-packages/radkummerkasten/",
    "C:/hostedtoolcache/windows/Python/*/x64/Lib/site-packages/radkummerkasten/"
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == .__main__.:',
]

[tool.flake8]
exclude = ["build", "dist", "docs/conf.py", "node_modules", "vendor", ".virtualenv"]
extent-ignore = ["E203", "E501", "E701"]
extent-select = ["B950"]
max-line-length = 88

[tool.isort]
profile = "black"
skip = ["build", "dist", "docs/conf.py", "node_modules", "vendor", ".virtualenv"]

[tool.pydocstyle]
#match-dir = "^(src|tests|build_backend).*"

[tool.pylintrc]
good-names = ["i", "j", "k", "e", "ex", "id", "Run", "_"]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "-p no:faulthandler --cov=radkummerkasten --cov-report term-missing --cov-report xml --import-mode=importlib --junitxml=junit.xml -o junit_family=legacy"
testpaths = ["tests"]

[tools.radkummerkasten-build-backend]
sass_files = ["src/radkummerkasten/frontend/static/style/radkummerkasten.sass"]
ecmascript_files = [
    "src/radkummerkasten/frontend/static/script/radkummerkasten-map.js",
    "src/radkummerkasten/frontend/static/script/radkummerkasten.js",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "radkummerkasten.__version__"}

[tool.setuptools.package-data]
"*" = [
    "*.html",
    "*.jpg",
    "*.js.map",
    "*.json",
    "*.min.css",
    "*.min.js",
    "*.png",
    "*.svg",
    "*.webmanifest",
    "*.webp",
    "*.woff2",
]
